# TheRock

./: .gitignore  .pre-commit-config.yaml  BUILD_TOPOLOGY.toml  CLAUDE.md  CMakePresets.json  CONTRIBUTING.md  SUPPORTED_GPUS.md  requirements-test.txt  requirements.txt
.github/workflows/: build_portable_linux_pytorch_wheels_ci.yml  build_spack_rocm_packages.yml  build_windows_pytorch_wheels_ci.yml  ci_asan.yml  ci_tsan.yml  ci_weekly.yml  hip_tagging_automation.yml  multi_arch_build_portable_linux.yml  multi_arch_build_windows.yml  multi_arch_ci_windows.yml  pre-commit.yml  publish_build_manylinux_rccl_x86_64.yml  publish_build_manylinux_x86_64.yml  publish_dockerfile.yml  publish_no_rocm_image_ubuntu24_04.yml  publish_no_rocm_image_ubuntu24_04_ocl_rt.yml  publish_no_rocm_image_ubuntu24_04_rocgdb.yml  release_native_linux_packages.yml  release_windows_packages.yml  test_artifacts_structure.yml  test_benchmarks.yml  test_jax_dockerfile.yml  test_rocm_wheels.yml  therock_test_harness.yml
base/: post_hook_rocm_smi_lib.cmake
build_tools/: analyze_build_times.py  artifact_manager.py  buildctl.py  configure_stage.py  export_source_archive.py  fetch_artifacts.py  fetch_repo.py  fileset_tool.py  find_artifacts_for_commit.py  find_latest_artifacts.py  health_status.py  index_generation_s3_tar.py  install_additional_requirements.py  linux_portable_build.py  merge_compile_commands.py  patch_linux_so.py  patch_rocm_libraries.py  patch_third_party_source.py  posix_ccache_compiler_check.py  print_driver_gpu_info.py  pyproject.toml  resource_info.py  save_patches.sh  setup_sccache_rocm.py  setup_venv.py  teatime.py  validate_shared_library.py  validate_windows_install.ps1  watch_top_processes.sh
build_tools/_therock_utils/: artifact_backend.py  artifacts.py  exe_stub_gen.py  hash_util.py  pattern_match.py  py_packaging.py  storage_backend.py  storage_location.py
build_tools/detail/: linux_portable_build_in_container.sh  linux_python_package_in_container.sh
build_tools/github_actions/: cleanup_processes.ps1  compute_jax_package_version.py  configure_ci_path_filters.py  configure_target_run.py  detect_external_repo_config.py  determine_version.py  fetch_job_status.py  fetch_package_targets.py  generate_pytorch_manifest.py  hip_tagging_helper.py  new_amdgpu_family_matrix.py  post_build_upload.py  print_test_reproduction_steps.py  promote_wheels_based_on_policy.py  python_to_cp_version.py  summarize_test_pytorch_workflow.py  upload_python_packages.py  upload_pytorch_manifest.py  write_jax_versions.py  write_torch_versions.py
build_tools/hack/: check_path_lengths.py  delete_workflow.sh  diagnose.py  get_prs_by_files_changed.py
build_tools/packaging/: download_prerelease_packages.py  promote_from_rc_to_final.py  upload_release_packages.py
build_tools/tests/: artifact_backend_test.py  artifact_descriptor_overlap_test.py  artifact_manager_tool_test.py  artifacts_test.py  compute_rocm_package_version_test.py  conftest.py  fetch_artifacts_test.py  fileset_tool_test.py  find_artifacts_for_commit_test.py  find_latest_artifacts_test.py  py_packaging_test.py  setup_venv_test.py  storage_backend_test.py
cmake/: custom_install_amdgpu_compiler.cmake  custom_install_amdgpu_runtime.cmake  custom_install_amdgpu_runtime_dev.cmake  therock_artifacts.cmake  therock_compiler_config.cmake  therock_default_targets.cmake  therock_detect_python_versions.cmake  therock_explicit_finders.cmake  therock_external_source.cmake  therock_features.cmake  therock_flag_utils.cmake  therock_global_post_subproject.cmake  therock_globals.cmake  therock_install_linux_build_id_files.cmake  therock_job_pools.cmake  therock_sanitizers.cmake  therock_subproject.cmake  therock_subproject_dep_provider.cmake  therock_subproject_utils.cmake  therock_testing.cmake
cmake/finders/: FindBLAS.cmake  FindLAPACK.cmake
cmake/templates/: find_config.tmpl.cmake  find_config_version.tmpl.cmake
comm-libs/: pre_hook_rccl.cmake
compiler/: CMakeLists.txt  pre_hook_amd-comgr.cmake  pre_hook_hipify.cmake
core/: post_hook_amdsmi.cmake  post_hook_hip-clr.cmake  pre_hook_ROCR-Runtime.cmake
core/hipInfo/: CMakeLists.txt
dctools/: CMakeLists.txt
debug-tools/: CMakeLists.txt
debug-tools/rocgdb/: CMakeLists.txt  rocgdb
dockerfiles/: README.md  build_manylinux_x86_64.Dockerfile  install_openmpi.sh  install_rocm_deps.sh  install_rocm_tarball.sh  install_sccache.sh  install_shared_pythons.sh  no_rocm_image_ubuntu24_04_ocl_rt.Dockerfile  no_rocm_image_ubuntu24_04_rocgdb.Dockerfile  spack_ubuntu24_04.Dockerfile
dockerfiles/rocm-spack-env/: entrypoint.sh  spack.yaml  update_spack_from_metadata.sh
docs/: environment_setup_guide.md  faq.md
docs/development/: adding_tests.md  build_system.md  dependencies.md  flags.md  installing_artifacts.md  test_environment_reproduction.md  windows_support.md
docs/packaging/: python_packaging.md
examples/: CMakeLists.txt  clean_configure_test_project.cmake
examples/cpp-sdk-user/: CMakeLists.txt  hip-host-test.cpp  sample_kernel.hip
external-builds/pytorch/: README.md  build_prod_wheels.py  checkout_pytorch_all.sh  env_init.sh  pytorch_apex_repo.py  pytorch_audio_repo.py  pytorch_torch_repo.py  pytorch_triton_repo.py  pytorch_utils.py  pytorch_vision_repo.py  repo_management.py  requirements-ci.txt  run_pytorch_smoke_tests.py  run_pytorch_tests.py  run_pytorch_tests_full.py  sanity_check_wheel.py  windows_patch_fat_wheel.py
external-builds/uccl/: build_prod_wheels.py  repo_management.py  uccl_repo.py
iree-libs/: post_hook_fusilliprovider.cmake
math-libs/: CMakeLists.txt  artifact-prim.toml  pre_hook_rocPRIM.cmake  pre_hook_rocRAND.cmake
math-libs/BLAS/: CMakeLists.txt  pre_hook_hipSPARSE.cmake  pre_hook_hipSPARSELt.cmake  pre_hook_rocBLAS.cmake  pre_hook_rocSPARSE.cmake
math-libs/support/: CMakeLists.txt
media-libs/: CMakeLists.txt  README.md
ml-libs/: post_hook_hipblasltprovider.cmake  pre_hook_MIOpen.cmake
profiler/: post_hook_rocprofiler-sdk.cmake
tests/: dlopen-hip.c  hipcc_check.cpp  test_artifact_structure.py
tests/extended_tests/: __init__.py
(+135 files in other folders)
